src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_Disposition__c</fullName>
        <label>Call Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid Number</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Conversation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_GUID__c</fullName>
        <label>Call GUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Start_Time__c</fullName>
        <description>The time that an inbound or outbound call was initiated.</description>
        <label>Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Contact</fullName>
                </value>
                <value>
                    <fullName>Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>No Contact</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Had conversation</fullName>
                </value>
                <value>
                    <fullName>Made presentation</fullName>
                </value>
                <value>
                    <fullName>Liquidation</fullName>
                </value>
                <value>
                    <fullName>PGP RePrice</fullName>
                </value>
                <value>
                    <fullName>IRA paperwork</fullName>
                </value>
                <value>
                    <fullName>Client Acquisition made</fullName>
                </value>
                <value>
                    <fullName>Do not Call</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Made</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Used__c</fullName>
        <description>Staff extension used to receive an inbound call or to make an outbound call.</description>
        <label>Extension Used</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Response__c</fullName>
        <description>First 255 characters of HTTP response to the webservice callout to the phone system webservice.</description>
        <label>HTTP Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>The phone number of the caller or the callee.</description>
        <label>Phone Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>